# wol_automation

./: .gitignore  README.md  email_service.py  main.py  monitor_service.py  pyproject.toml  remote_poweron.py  remote_shutdown.py  requirements.txt
install/: install_service.bat  install_service.sh
templates/: notification.html
wol_automation/: install_service.bat  install_service.sh  main.py  monitor_service.py  remote_poweron.py  remote_shutdown.py
